crates/service/tests/code_action/snapshots/features__code_action__add_result_types__after_block_type.snap
---
source: crates/service/tests/code_action/add_result_types.rs
expression: response
---
[
  {
    "title": "Add result types to `$b`",
    "kind": "quickfix",
    "diagnostics": [
      {
        "range": {
          "start": {
            "line": 0,
            "character": 0
          },
          "end": {
            "line": 0,
            "character": 0
          }
        },
        "code": "type-check",
        "message": "",
        "data": [
          21,
          58,
          [
            "i32"
          ]
        ]
      }
    ],
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 3,
                "character": 22
              },
              "end": {
                "line": 3,
                "character": 22
              }
            },
            "newText": " (result i32)"
          }
        ]
      }
    }
  }
]
