crates/service/tests/code_action/snapshots/features__code_action__add_result_types__after_func_keyword.snap
---
source: crates/service/tests/code_action/add_result_types.rs
expression: response
---
[
  {
    "title": "Add result types",
    "kind": "quickfix",
    "diagnostics": [
      {
        "range": {
          "start": {
            "line": 0,
            "character": 0
          },
          "end": {
            "line": 0,
            "character": 0
          }
        },
        "code": "type-check",
        "message": "",
        "data": [
          11,
          33,
          [
            "i32"
          ]
        ]
      }
    ],
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 2,
                "character": 7
              },
              "end": {
                "line": 2,
                "character": 7
              }
            },
            "newText": " (result i32)"
          }
        ]
      }
    }
  }
]
