crates/service/tests/code_action/snapshots/features__code_action__add_result_types__after_func_params.snap
---
source: crates/service/tests/code_action/add_result_types.rs
expression: response
---
[
  {
    "title": "Add result types",
    "kind": "quickfix",
    "diagnostics": [
      {
        "range": {
          "start": {
            "line": 3,
            "character": 15
          },
          "end": {
            "line": 3,
            "character": 16
          }
        },
        "code": "type-check",
        "message": "",
        "data": [
          "i32"
        ]
      }
    ],
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 2,
                "character": 46
              },
              "end": {
                "line": 2,
                "character": 46
              }
            },
            "newText": " (result i32)"
          }
        ]
      }
    }
  }
]
