crates/service/tests/code_action/snapshots/features__code_action__add_result_types__after_func_type_use.snap
---
source: crates/service/tests/code_action/add_result_types.rs
expression: response
---
[
  {
    "title": "Add result types to `$f`",
    "kind": "quickfix",
    "diagnostics": [
      {
        "range": {
          "start": {
            "line": 0,
            "character": 0
          },
          "end": {
            "line": 0,
            "character": 0
          }
        },
        "code": "type-check",
        "message": "",
        "data": [
          11,
          63,
          [
            "i32"
          ]
        ]
      }
    ],
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 2,
                "character": 37
              },
              "end": {
                "line": 2,
                "character": 37
              }
            },
            "newText": " (result i32)"
          }
        ]
      }
    }
  }
]
